--- a/TPMetodosAgiles/src/main/java/Presentacion/ImprimirLicencia.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/ImprimirLicencia.form
@@ -127,23 +127,23 @@
                                   </Group>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Group type="102" attributes="0">
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="tipo" min="-2" pref="200" max="-2" attributes="0"/>
-                                              <Component id="clase" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
-                                              <Component id="vigencia" min="-2" pref="200" max="-2" attributes="0"/>
-                                              <Component id="don" min="-2" pref="200" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                                      </Group>
-                                      <Component id="jSeparator5" max="32767" attributes="0"/>
+                                      <Component id="tipo" min="-2" pref="200" max="-2" attributes="0"/>
+                                      <Component id="clase" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
+                                      <Component id="vigencia" min="-2" pref="200" max="-2" attributes="0"/>
+                                      <Component id="don" min="-2" pref="200" max="-2" attributes="0"/>
                                   </Group>
+                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
-                              <Group type="102" attributes="0">
+                              <Group type="102" alignment="1" attributes="0">
                                   <EmptySpace max="32767" attributes="0"/>
-                                  <Component id="imprimir" min="-2" pref="113" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jLabel15" min="-2" pref="245" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="102" alignment="1" attributes="0">
+                                          <Component id="imprimir" min="-2" pref="113" max="-2" attributes="0"/>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="jLabel15" min="-2" pref="245" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Component id="jSeparator5" alignment="1" min="-2" pref="240" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
@@ -223,7 +223,7 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                          <Component id="jSeparator5" min="-2" pref="2" max="-2" attributes="0"/>
+                          <Component id="jSeparator5" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jLabel15" min="-2" pref="109" max="-2" attributes="0"/>
                       </Group>
@@ -464,9 +464,6 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Microsoft JhengHei UI" size="12" style="1"/>
             </Property>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\Datos\Descargas\eye.png"/>
-            </Property>
             <Property name="text" type="java.lang.String" value="VISTA PREVIA"/>
           </Properties>
           <Events>
@@ -543,9 +540,6 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Microsoft JhengHei UI" size="12" style="1"/>
             </Property>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\Datos\Descargas\printer-.png"/>
-            </Property>
             <Property name="text" type="java.lang.String" value="IMPRIMIR"/>
           </Properties>
           <Events>
@@ -561,9 +555,6 @@
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Microsoft JhengHei UI" size="12" style="1"/>
-            </Property>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\Datos\Descargas\image-file.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="CARGAR FOTO"/>
           </Properties>
