--- a/TPMetodosAgiles/src/main/java/Presentacion/AltaTitular.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/AltaTitular.form
@@ -322,7 +322,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="33" green="33" red="33" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Registro de titular"/>
+            <Property name="text" type="java.lang.String" value="Registro de Titular"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelDocumento">
@@ -402,7 +402,7 @@
           <Properties>
             <Property name="toolTipText" type="java.lang.String" value="Ingrese como maximo 2 nombres"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor de Texto"/>
+              <Color id="Default Cursor"/>
             </Property>
           </Properties>
         </Component>
